# youtube_comment

./: .gitignore  README.md  pyproject.toml
src/youtube_comment/: __init__.py  getYouTubeComments.py  settings.py
