[project]
name = "youtube-comment"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tom", email = "lazydinosaur0321@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "google-api-python-client>=2.159.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/youtube_comment"]
